WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
69229
[Chromium] Moved files towards GTK removal
https://bugs.webkit.org/show_bug.cgi?id=69229
Summary
[Chromium] Moved files towards GTK removal
Fady Samuel
Reported
2011-10-02 14:26:53 PDT
[Chromium] Moved files towards GTK removal
Attachments
Patch
(43.74 KB, patch)
2011-10-02 14:27 PDT
,
Fady Samuel
no flags
Details
Formatted Diff
Diff
Patch for landing
(43.73 KB, patch)
2011-10-04 10:53 PDT
,
Tony Chang
no flags
Details
Formatted Diff
Diff
Patch for landing
(43.72 KB, patch)
2011-10-04 13:33 PDT
,
Tony Chang
webkit.review.bot
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Fady Samuel
Comment 1
2011-10-02 14:27:41 PDT
Created
attachment 109428
[details]
Patch
Tony Chang
Comment 2
2011-10-04 10:47:04 PDT
Comment on
attachment 109428
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=109428&action=review
> Source/WebKit/chromium/src/WebViewImpl.cpp:2312 > activeColor, > trackColor);
Nit: Fix indent.
Tony Chang
Comment 3
2011-10-04 10:53:17 PDT
Created
attachment 109647
[details]
Patch for landing
WebKit Review Bot
Comment 4
2011-10-04 13:06:35 PDT
Comment on
attachment 109647
[details]
Patch for landing Rejecting
attachment 109647
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 Last 500 characters of output: ommit-queue/Tools/Scripts/webkitpy/tool/commands/stepsequence.py", line 64, in _run step(tool, options).run(state) File "/mnt/git/webkit-commit-queue/Tools/Scripts/webkitpy/tool/steps/validatereviewer.py", line 57, in run if self._has_valid_reviewer(changelog_entry): File "/mnt/git/webkit-commit-queue/Tools/Scripts/webkitpy/tool/steps/validatereviewer.py", line 42, in _has_valid_reviewer if changelog_entry.reviewer(): AttributeError: 'NoneType' object has no attribute 'reviewer' Full output:
http://queues.webkit.org/results/9954145
Tony Chang
Comment 5
2011-10-04 13:33:27 PDT
Created
attachment 109673
[details]
Patch for landing
WebKit Review Bot
Comment 6
2011-10-04 15:42:43 PDT
Comment on
attachment 109673
[details]
Patch for landing Rejecting
attachment 109673
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 Last 500 characters of output: ommit-queue/Tools/Scripts/webkitpy/tool/commands/stepsequence.py", line 64, in _run step(tool, options).run(state) File "/mnt/git/webkit-commit-queue/Tools/Scripts/webkitpy/tool/steps/validatereviewer.py", line 57, in run if self._has_valid_reviewer(changelog_entry): File "/mnt/git/webkit-commit-queue/Tools/Scripts/webkitpy/tool/steps/validatereviewer.py", line 42, in _has_valid_reviewer if changelog_entry.reviewer(): AttributeError: 'NoneType' object has no attribute 'reviewer' Full output:
http://queues.webkit.org/results/9930984
Tony Chang
Comment 7
2011-10-04 16:00:06 PDT
Committed
r96660
: <
http://trac.webkit.org/changeset/96660
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug