[Chromium] Moved files towards GTK removal https://bugs.webkit.org/show_bug.cgi?id=69229

Patch by Fady Samuel <fsamuel@chromium.org> on 2011-10-04
Reviewed by Tony Chang.

Source/WebCore:

* WebCore.gypi:
* platform/chromium/PlatformThemeChromiumLinux.cpp: Renamed from Source/WebCore/platform/chromium/PlatformThemeChromiumGtk.cpp.
(WebCore::PlatformThemeChromiumLinux::setScrollbarColors):
(WebCore::clamp):
(WebCore::PlatformThemeChromiumLinux::saturateAndBrighten):
(WebCore::PlatformThemeChromiumLinux::outlineColor):
(WebCore::PlatformThemeChromiumLinux::paintArrowButton):
* platform/chromium/PlatformThemeChromiumLinux.h: Renamed from Source/WebCore/platform/chromium/PlatformThemeChromiumGtk.h.
(WebCore::PlatformThemeChromiumLinux::thumbInactiveColor):
(WebCore::PlatformThemeChromiumLinux::thumbActiveColor):
(WebCore::PlatformThemeChromiumLinux::trackColor):
(WebCore::PlatformThemeChromiumLinux::PlatformThemeChromiumLinux):

Source/WebKit/chromium:

* WebKit.gyp:
* src/WebViewImpl.cpp:
(WebKit::WebViewImpl::setScrollbarColors):
* src/linux/WebFontInfo.cpp: Renamed from Source/WebKit/chromium/src/gtk/WebFontInfo.cpp.
(WebKit::WebFontInfo::familyForChars):
(WebKit::WebFontInfo::renderStyleForStrike):

Canonical link: https://commits.webkit.org/85422@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@96660 268f45cc-cd09-0410-ab3c-d52691b4dbfc